syntax = "proto3";

package pb;

message Zone {
    string shortname = 1; 
    int64 id = 2;
    string filename = 3; 
    string longname = 4; 
    string mapfilename = 5; 
    float safex = 6; 
    float safey = 7; 
    float safez = 8; 
    float graveyardid = 9; 
    int64 minlevel = 10;
    int64 minstatus = 11;
    int64 zoneidnumber = 12;
    int64 version = 13;
    int64 timezone = 14;
    int64 maxclients = 15;
    int64 ruleset = 16;
    string note = 17;
    float underworld = 18;
    float minclip = 19;
    float maxclip = 20;
    float fogminclip = 21;
    float fogmaxclip = 22;
    int64 fogblue = 23;
    int64 fogred = 24;
    int64 foggreen = 25;
    int64 sky = 26;
    int64 ztype = 27;
    float zoneexpmultiplier = 28;
    float walkspeed = 29;
    int64 timetype = 30;
    int64 fogred1 = 31;
    int64 foggreen1 = 32;
    int64 fogblue1 = 33;
    float fogminclip1 = 34;
    float fogmaxclip1 = 35;
    int64 fogred2 = 36;
    int64 foggreen2 = 37;
    int64 fogblue2 = 38;
    float fogminclip2 = 39;
    float fogmaxclip2 = 40;
    int64 fogred3 = 41;
    int64 foggreen3 = 42;
    int64 fogblue3 = 43;
    float fogminclip3 = 44;
    float fogmaxclip3 = 45;
    int64 fogred4 = 46;
    int64 foggreen4 = 47;
    int64 fogblue4 = 48;
    float fogminclip4 = 49;
    float fogmaxclip4 = 50;
    float fogdensity = 51;
    string flagneeded = 52;
    int64 canbind = 53;
    int64 cancombat = 54;
    int64 canlevitate = 55;
    int64 castoutdoor = 56;
    int64 hotzone = 57;
    int64 insttype = 58;
    int64 shutdowndelay = 59;
    int64 peqzone = 60;
    int64 expansion = 61;
    int64 suspendbuffs = 62;
    int64 rainchance1 = 63;
    int64 rainchance2 = 64;
    int64 rainchance3 = 65;
    int64 rainchance4 = 66;
    int64 rainduration1 = 67;
    int64 rainduration2 = 68;
    int64 rainduration3 = 69;
    int64 rainduration4 = 70;
    int64 snowchance1 = 71;
    int64 snowchance2 = 72;
    int64 snowchance3 = 73;
    int64 snowchance4 = 74;
    int64 snowduration1 = 75;
    int64 snowduration2 = 76;
    int64 snowduration3 = 77;
    int64 snowduration4 = 78;
    float gravity = 79;
    int64 type = 80;
    int64 skylock = 81;
    int64 fastregenhp = 82;
    int64 fastregenmana = 83;
    int64 fastregenendurance = 84;
    int64 npcmaxaggrodist = 85;
    int64 maxmovementupdaterange = 86;
}
